--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "github-markdown-css": "^5.1.0",
     "vue": "^3.2.37",
     "vue-router": "4"
   },
