--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "github-markdown-css": "^5.1.0",
+    "marked": "^4.1.0",
+    "vite-plugin-markdown": "^2.1.0",
     "vue": "^3.2.37",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^18.7.18",
     "@vitejs/plugin-vue": "^3.1.0",
     "sass": "^1.54.9",
     "typescript": "^4.6.4",
