--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,3 +16,13 @@
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
+
+// {
+//   "compilerOptions": {
+//     "target": "esnext",
+//     "module": "esnext",
+//     "strict": false,
+//     "jsx": "preserve",
+//     "moduleResolution": "node"
+//   }
+// }
