--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "github-markdown-css": "^5.1.0",
     "marked": "^4.1.0",
+    "prismjs": "^1.29.0",
     "vue": "^3.2.37",
     "vue-router": "4"
   },
